# dsd-cloudron

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: test.yml
developer_resources/: README.md  cloudron_list.txt
docs/: Makefile  changelog.md  conf.py  contributing.md  index.md
docs/explanation/: architecture.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: addons-and-email.md  deploy-wagtail-project.md  enable-celery.md  enable-sso.md  operating-and-updating.md  retrofit-existing-project.md  scaffold-new-project.md  troubleshooting.md
docs/reference/: cli.md  cloudron-addons.md  generated-files.md
dsd_cloudron/: __init__.py  cli.py  cloudron_cli.py  deploy.py  deploy_messages.py  new.py  packaging.py  platform_deployer.py  plugin_config.py  uv_retrofit.py
dsd_cloudron/project_template/: cookiecutter.json
dsd_cloudron/project_template/hooks/: post_gen_project.py
dsd_cloudron/project_template/{{cookiecutter.project_slug}}/: .gitignore  Dockerfile.dev  README.md  docker-compose.yml  manage.py  pyproject.toml
dsd_cloudron/project_template/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
dsd_cloudron/project_template/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/accounts/: apps.py  models.py
dsd_cloudron/project_template/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/accounts/migrations/: 0001_initial.py
dsd_cloudron/project_template/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/core/: api.py  apps.py  views.py
dsd_cloudron/templates/: celery_app  dockerfile  dockerignore  nginx.conf  readme_cloudron.md  settings_import  start.sh  supervisor_celery_beat.conf  supervisor_celery_worker.conf  supervisor_gunicorn.conf  supervisor_nginx.conf
tests/: conftest.py
tests/bake_tests/: conftest.py  test_bake_lean.py  test_bake_toggles.py  test_scaffold_artifacts.py  test_section6_fixes.py
tests/build_tests/: README.md  assemble_retrofit_sample.py  boot_smoke.sh  test_assemble_retrofit_sample.py
tests/e2e_tests/: __init__.py  conftest.py  test_deployment.py  utils.py
tests/integration_tests/: test_celery_sso.py  test_cloudron_config.py  test_help_output.py  test_wagtail.py
tests/integration_tests/reference_files/: CloudronManifest.json  Dockerfile  NOTE.md  README-cloudron.md  celery_sso.CloudronManifest.json  celery_sso.README-cloudron.md  celery_sso.cloudron_settings.py  celery_sso.supervisor.celery-beat.conf  celery_sso.supervisor.celery-worker.conf  pipenv.Dockerfile  poetry.Dockerfile  start.sh  wagtail.CloudronManifest.json  wagtail.README-cloudron.md  wagtail.cloudron_settings.py  wagtail.start.sh
tests/integration_tests/reference_files/blog/: cloudron_settings.py
tests/integration_tests/reference_files/supervisor/: gunicorn.conf
tests/unit_tests/: conftest.py  test_add_artifacts.py  test_add_celery_app.py  test_add_requirements.py  test_build_config.py  test_cli.py  test_cloudron_cli.py  test_conclude_and_success.py  test_config.py  test_deploy_happy_path.py  test_deploy_hooks.py  test_deploy_messages.py  test_docs_present.py  test_export_locked_requirements.py  test_golden_snapshot.py  test_invariants.py  test_modify_settings.py  test_new.py  test_package_data.py  test_plugin_config.py  test_reconfigure.py  test_render_all.py  test_render_dockerfile.py  test_render_manifest.py  test_render_misc.py  test_render_nginx.py  test_render_settings.py  test_render_start_sh.py  test_render_supervisor.py  test_sso_consistency.py  test_start_sh_execution.py  test_tier_reporting.py  test_uv_retrofit.py  test_wagtail_settings.py
tests/unit_tests/expected/: CloudronManifest.json  Dockerfile  NOTE.md  celery.py  cloudron_adapters.py  cloudron_settings.py  nginx.conf  start.sh  uv.Dockerfile
