[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "dsd-cloudron"
version = "2026.7.1"
description = "A plugin for django-simple-deploy, supporting deployments to Cloudron."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Jack Linke", email = "jacklinke@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["django", "deployment", "cloudron"]
requires-python = ">=3.11"
dependencies = [
    "django>=4.2",
    "pluggy>=1.5.0",
    # Core must be new enough to call the plugin CLI hooks (dsd_get_plugin_cli /
    # dsd_validate_cli, wired since 1.2.1) and the uv retrofit pre-inspect hook
    # (dsd_pre_inspect, since 1.4.0). An older core silently drops those hooks:
    # every deploy flag fails argparse and a uv-managed retrofit is skipped.
    "django-simple-deploy>=1.4.0",
    "cookiecutter>=2.5",
]

[project.optional-dependencies]
dev = [
    "black>=24.1.0",
    "build>=1.2.1",
    # Python 3.11+ reads TOML natively, so coverage picks up its config from this
    # file without the extra TOML parser the [toml] extra would otherwise pull in.
    "coverage>=7.4",
    "pytest>=8.3.0",
    "pytest-cookies>=0.7.0",
    "pytest-cov>=5.0",
    # twine 6.1 is the first release that validates and uploads Metadata 2.4,
    # which the PEP 639 `license` expression makes the build emit.
    "twine>=6.1.0",
]
# Runtime packages the toggle-on bake tests import. The bake tests shell out with
# the *outer* interpreter (`subprocess.run([sys.executable, "manage.py", ...])`),
# so these must be importable in the test environment - being listed in the
# *baked* project's pyproject.toml is not enough. Run the bake suite with
# `pip install -e ".[dev,bake]"`. The toggle tests still `importorskip` each
# package, so a `dev`-only environment skips them instead of erroring.
bake = [
    "celery>=5.3",
    "django-redis>=5.4",
    "django-allauth[mfa,socialaccount]>=65",
    "crispy-bootstrap5>=2024.2",
    "django-htmx>=1.17",
    "django-ninja>=1.1",
    "django-storages[boto3]>=1.14",
]
docs = [
    "sphinx>=7",
    "myst-parser>=2",
    "furo",
    "sphinx-copybutton",
    "sphinx-design",
]

[project.scripts]
dsd-cloudron = "dsd_cloudron.new:main"

[project.urls]
"GitHub" = "https://github.com/omenapps/dsd-cloudron"

[tool.setuptools]
# project_template and its hooks directory hold Python files, so setuptools sees
# them as importable packages. Declare them here so they are shipped deliberately
# rather than swept in ambiguously by include-package-data. The rendered template
# tree under {{cookiecutter.project_slug}} is not a valid package name, so it stays
# package data and rides along through the MANIFEST.in recursive-include.
packages = [
    "dsd_cloudron",
    "dsd_cloudron.templates",
    "dsd_cloudron.project_template",
    "dsd_cloudron.project_template.hooks",
]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "skip_auto_dsd_call: provided by django-simple-deploy's integration-test harness",
]

[tool.coverage.run]
# Naming the source here lets a bare `pytest --cov` (no target) measure the plugin.
branch = true
source = ["dsd_cloudron"]
omit = [
    # The cookiecutter project template is rendered into the user's project, not run
    # as part of the plugin; measuring it only tries to parse template files (e.g. a
    # rendered .gitignore) as Python and adds noise to the report.
    "dsd_cloudron/project_template/*",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    # The module entry-point guard only runs when the file is executed directly.
    "if __name__ == .__main__.:",
]

[tool.ruff]
# Ruff (and the VSCode Ruff extension's language server) walks the tree and parses
# every pyproject.toml as a candidate config file. The cookiecutter template's
# pyproject.toml embeds Jinja such as {% if cookiecutter.use_redis == "yes" %},
# which is not valid TOML, so Ruff aborts with a parse error. Exclude the template
# tree so Ruff never descends into it. The reference_files are byte-exact render
# output, not source, so they are excluded here the same way black excludes them.
extend-exclude = [
    "dsd_cloudron/project_template",
    "tests/integration_tests/reference_files",
]

[tool.ruff.lint.per-file-ignores]
# The integration tests import shared fixtures (tmp_project, pkg_manager,
# dsd_version) from django-simple-deploy core's conftest - the canonical DSD plugin
# pattern, matching every reference plugin. Ruff reads those imports as unused
# (F401) and sees each fixture parameter as redefining the import (F811); both are
# inherent to the fixture pattern rather than real defects.
"tests/integration_tests/*.py" = ["F401", "F811"]

[tool.pyright]
# The project_template tree is a cookiecutter template: its .py files embed Jinja
# tags such as {% if cookiecutter.use_sso == "yes" %} and {{ cookiecutter.project_slug }},
# which are not valid Python. Keep the type checker (and VSCode's Pylance, which reads
# this table) from parsing them, otherwise the whole template reads as syntax errors.
# `exclude` drops them from the analyzed set; `ignore` also suppresses diagnostics when
# such a file is opened directly in the editor.
exclude = ["dsd_cloudron/project_template"]
ignore = ["dsd_cloudron/project_template"]

[tool.black]
# Pin the formatting targets to the supported interpreters. Without this black
# infers the range from requires-python (>=3.11) up through its own newest known
# Python, which both prints an AST-safety warning on older interpreters and lets
# formatting drift between CI matrix legs.
target-version = ["py311", "py312"]
# The golden snapshot fixtures and the integration reference files are byte-exact
# render output, not source code; black must not reformat them or they stop
# matching the render functions and the deployed artifacts.
force-exclude = "tests/unit_tests/expected/|tests/integration_tests/reference_files/|dsd_cloudron/project_template/"
