[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
requires-python = ">=3.11"
dependencies = [
    "django>=4.2",
    # Match the retrofit's tested floors: gunicorn's is the request-smuggling fix
    # (CVE-2024-1135); psycopg's is Django's enforced minimum for the postgresql
    # backend (Django 6.0 requires psycopg 3.1.12+).
    "gunicorn>=22.0",
    "psycopg[binary]>=3.1.12",
{% if cookiecutter.use_redis == "yes" %}    "django-redis",
{% endif %}{% if cookiecutter.use_celery == "yes" %}    "celery[redis]",
{% endif %}{% if cookiecutter.use_sso == "yes" %}    "django-allauth[mfa,socialaccount]",
{% endif %}{% if cookiecutter.use_htmx == "yes" %}    "django-htmx",
    "django-crispy-forms",
    "crispy-bootstrap5",
{% endif %}{% if cookiecutter.use_ninja == "yes" %}    "django-ninja",
{% endif %}{% if cookiecutter.use_s3 == "yes" %}    "django-storages[boto3]",
{% endif %}]
